# bodhi-tree-ai

./: .gitignore  Makefile  README.md
cdk/: .env.example  .gitignore  package-lock.json  package.json
cdk/lambda/functions/: agent-status.js  mcp-proxy.js  mcp-servers.js  strategies.js  tasks.js
cdk/lib/: cdk-stack.ts
client/: .env.example  package-lock.json  package.json
client/app/: globals.css  layout.tsx
client/app/(dashboard)/: layout.tsx  page.tsx
client/components/: AddServerForm.tsx  MCPServerCard.tsx  MCPTemplateModal.tsx  Sidebar.tsx
client/components/playground/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  ConversationSidebar.tsx  MCPServerModal.tsx  MCPServerSelector.tsx  ToolResultDisplay.tsx  WelcomeMessage.tsx
client/components/ui/: AddServerModal.tsx  BaseModal.tsx  ConfirmDialog.tsx  MCPConfirmDialog.tsx  StrategyTemplateModal.tsx
client/contexts/: AgentContext.tsx  AuthContext.tsx
client/hooks/: useAgentStatus.ts  useMCPServers.ts
client/lib/: chat.ts  direct-chat-service.ts  mcp-templates.ts  mockData.ts  playground-api.ts  storage.ts
client/types/: index.ts  playground.ts
contracts/kaia-evm/: .env.example  .gitignore  remappings.txt
contracts/kaia-evm/src/: BodhiVault.sol
enclave/: Cargo.toml  Dockerfile
enclave/src/: main.rs
mcp-server/: .env.example  apprunner.yaml  package-lock.json  package.json  server.js
mcp-server/scripts/: deploy.sh  test-migration.sh
mcp-server/src/: mcp-manager.js
parent/: Cargo.toml
parent/src/: main.rs
test-app-runner/: README.md  apprunner.yaml  package.json  server.js
(+14 files in other folders)
