[package]
name = "bodhi-parent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
nix = { version = "0.28", features = ["socket"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[features]
local-test = []

[[bin]]
name = "parent"
path = "src/main.rs"
